--- a/Lecture3/Iteration.ipynb
+++ b/Lecture3/Iteration.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T11:09:39.440722Z",
-     "start_time": "2020-09-26T11:09:39.378870Z"
+     "end_time": "2020-09-27T08:46:23.367252Z",
+     "start_time": "2020-09-27T08:46:23.282583Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -1634,11 +1634,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T00:13:13.780106Z",
-     "start_time": "2020-09-11T00:13:13.749104Z"
+     "end_time": "2020-09-27T08:55:33.231171Z",
+     "start_time": "2020-09-27T08:55:33.193049Z"
     },
     "nbgrader": {
      "grade": false,
@@ -1652,20 +1652,32 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98f6d57a6c1c4fc39bc49990e6002ea4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='1', description='num'), Output()), _dom_classes=('widget-interact',))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@interact(num='1')\n",
     "def check_composite(num):\n",
     "    if num.isdigit():\n",
     "        num = int(num)\n",
     "        # for divisor in range(2,num):    # use while instead\n",
-    "        ### BEGIN SOLUTION\n",
-    "        divisor = 1\n",
-    "        while divisor + 1 <= num**0.5:\n",
-    "            divisor += 1\n",
-    "        ### END SOLUTION\n",
+    "        divisor = 2\n",
+    "        while divisor <= num**0.5: \n",
     "            if num % divisor:\n",
-    "                continue\n",
+    "                divisor += 1\n",
     "            else:\n",
     "                print('It is composite.')\n",
     "                break\n",
