--- a/Lab3a/Improved Quadratic Equation Solver.ipynb
+++ b/Lab3a/Improved Quadratic Equation Solver.ipynb
@@ -168,9 +168,7 @@
      "end_time": "2020-09-22T05:38:20.004507Z",
      "start_time": "2020-09-22T05:38:19.996991Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "deletable": false,
     "editable": false,
     "nbgrader": {
@@ -558,26 +556,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-22T05:38:20.136810Z",
-     "start_time": "2020-09-22T05:38:17.496Z"
+     "end_time": "2020-09-28T09:29:23.169558Z",
+     "start_time": "2020-09-28T09:29:23.109723Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8273b64e3165404bbe876de8be5d76e6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=1, description='a', max=10, min=-10), IntSlider(value=2, description='b'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# quadratic equations solver\n",
     "@interact(a=(-10,10,1),b=(-10,10,1),c=(-10,10,1))\n",
     "def quadratic_equation_solver(a=1,b=2,c=1):\n",
     "    print('Root(s):',get_roots(a,b,c))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -596,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
