--- a/Lecture3/Conditional Execution.ipynb
+++ b/Lecture3/Conditional Execution.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T12:39:30.484155Z",
-     "start_time": "2020-09-26T12:39:30.436020Z"
+     "end_time": "2020-10-06T06:03:05.008319Z",
+     "start_time": "2020-10-06T06:03:04.942121Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -362,11 +362,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-12T05:54:39.873338Z",
-     "start_time": "2020-09-12T05:54:39.867318Z"
+     "end_time": "2020-10-06T06:09:39.976022Z",
+     "start_time": "2020-10-06T06:09:39.972862Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -376,16 +376,17 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2.0 == 2>1 #equivalent to (2.0 ==2) and (2>1)"
+    "#2.0 == 2>1 #equivalent to (2.0 ==2) and (2>1)\n",
+    "5!=6==5\n"
    ]
   },
   {
@@ -2329,7 +2330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
